# This file documents the revision history for Perl extension Catalyst.

        - Fix classes without metaclasses restarting, when not using
          B::Hooks::OP::Check::StashChange (t0m)
        - Fix the unattached chain debug table for endpoints with no
          parents at all. (rafl)
        - Turn of test aggregation by default. Only aggregate if the
          AGGREGATE_TESTS environment variable is set and a recent
          Test::Aggregate is available. (rafl)
        - POD formatting fix for Catalyst::Test (Dan Dascalescu)
        - Bump to MooseX::MethodAttributes 0.09, to gain the
          get_nearest_methods_with_attributes method allowing methods without
          attributes in a subclass to override those with attributes in a
          superclass. This fixes CatalystX::CRUD's method of overriding /
          disabling functionality from base controllers. (t0m)
        - Bump HTTP::Request::AsCGI dependency to avoid broken version (t0m)
        - Bump Moose dependency to latest version to fix metaclass
          incompatibility issues in some cases. (t0m)
        - Additional tests for setup_stats method. (t0m)
        - Fix log levels in Catalyst::Log to be properly additive. (t0m)
        - Fix RT#43375 by sorting results before testing them (t0m)
        - Fixes for uri_for_action when using Catalyst::DispatchType::Regex
          + tests from RT#39369 (norbi)
        - Partial rewrite and reoganisation of the C3 docs in
          Catalyst::Upgrading based on feedback from kiffin (t0m)
        - If you make your application class immutable and turn off
          constructor inlining, Catalyst will die and tell you pass
          the (replace_constructor => 1) argument to
          make_immutable. (Dave Rolsky)

5.80002 2009-04-22 01:28:36
        - Fix CATALYST_DEBUG and MYAPP_DEBUG environment variables
          turning debuging on if defined, rather than if set.
          They now force debugging on or off, taking precedence over